--- a/24. 10. 17 TIL.md
+++ b/24. 10. 17 TIL.md
@@ -1,1 +1,6 @@
-git hub활용이 점점 익숙해져간다.~
+1. git hub활용이 점점 익숙해져간다.
+
+2. SQL 코드카타 기초부터 다시 해나가 보자. 취업할 때 도움이 된다고 한다.
+ - Order By 정렬할 컬럼 DCSC/ASC 내림차순/오름차순
+ - WHERE NAME IS NOT NULL: 이름이 NULL이 아닌 경우만 포함하도록 필터링합니다.
+ - COUNT(DISTINCT NAME): 중복을 제거한 이름의 개수를 세는 함수입니다.
